team status prop
