# resources/public/swagger.yaml
@@ -129,11 +129,11 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/ValidationError'
-  /team/{id}/toggle:
+  /team/{id}/status:
     patch:
       tags:
         - team
-      operationId: toggle
+      operationId: updateStatus
       parameters:
         - name: id
           in: path
@@ -142,6 +142,14 @@ paths:
             type: integer
             format: int64
             minimum: 1
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                status:
+                  type: integer
       responses:
         200:
           description: Success
@@ -241,8 +249,8 @@ components:
           format: int64
         title:
           type: string
-        isEnabled:
-          type: boolean
+        status:
+          type: integer
         start:
           type: string
         duration:
